kubernetes/apps/nextcloud/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: ClusterIP
